[Work in Progress] Add Heal NS API endpoint
This patch set adds the Heal NS API for VNF Healing.

Issue-Id: VFC-39
